# parallel_eigen

./: .gitignore  CMakeLists.txt  README.md
docs/: random_mult_omp.txt  times.txt
src/: CMakeLists.txt  parallel_eigen.cpp  test_parallel.cpp
